--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-touch": "~1.4.3",
     "angular-route": "~1.4.3",
     "jquery": "~2.1.3",
-    "tink-core": "latest"
+    "tink-core": "latest",
+    "tink-datepicker-angular":"latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
