--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-route": "~1.4.3",
     "jquery": "~2.1.3",
     "tink-core": "latest",
-    "tink-datepicker-angular":"latest"
+    "tink-datepicker-angular":"latest",
+    "tink-identity-card-number-angular":"latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
