--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,12 @@
     "angular-route": "~1.4.3",
     "jquery": "~2.1.3",
     "tink-core": "latest",
-    "tink-datepicker-angular":"latest",
-    "tink-identity-card-number-angular":"latest"
+    "tink-datepicker-angular": "~1.2.2",
+    "tink-identity-card-number-angular": "~1.0.4",
+    "tink-range-datepicker-angular": "~1.0.4",
+    "tink-national-number-angular": "~1.0.5",
+    "tink-timepicker-angular": "~1.0.4",
+    "tink-upload-angular": "~1.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
