--- a/package.json
+++ b/package.json
@@ -7,46 +7,47 @@
     "url": "git@github.com:tinkkit/tink-editable-fieldset-angular.git"
   },
   "dependencies": {
-    "bower": "^1.3.12",
-    "grunt-cli": "^0.1.13"
+    "bower": "latest",
+    "grunt-cli": "latest"
   },
   "devDependencies": {
-    "grunt": "^0.4.1",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-bump": "~0.3.0",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-jshint": "~0.11.2",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-css-url-embed": "~1.5.1",
-    "grunt-karma": "~0.10.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-replace": "~0.8.0",
-    "grunt-sass": "^0.17.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jasmine-core": "~2.2.0",
-    "jshint-stylish": "^0.2.0",
-    "karma": "~0.12.31",
-    "karma-chrome-launcher": "~0.1.8",
-    "karma-coverage": "~0.3.1",
-    "karma-jasmine": "~0.3.5",
-    "karma-ng-html2js-preprocessor": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-sauce-launcher": "~0.2.10",
-    "load-grunt-tasks": "^0.4.0",
-    "semver": "~4.3.3",
-    "time-grunt": "^0.3.1"
+    "grunt": "latest",
+    "grunt-angular-templates": "latest",
+    "grunt-autoprefixer": "latest",
+    "grunt-bump": "latest",
+    "grunt-concurrent": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-css-url-embed": "latest",
+    "grunt-karma": "latest",
+    "grunt-newer": "latest",
+    "grunt-replace": "latest",
+    "grunt-sass": "latest",
+    "grunt-svgmin": "latest",
+    "grunt-usemin": "latest",
+    "grunt-wiredep": "latest",
+    "jasmine-core": "latest",
+    "jshint-stylish": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-coverage": "latest",
+    "karma-jasmine": "latest",
+    "karma-ng-html2js-preprocessor": "latest",
+    "karma-phantomjs-launcher": "latest",
+    "karma-sauce-launcher": "latest",
+    "load-grunt-tasks": "latest",
+    "semver": "latest",
+    "serve-static": "^1.10.0",
+    "time-grunt": "latest"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "latest"
   },
   "scripts": {
     "test": "grunt test",
