changed bower and package version information

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tink-editable-fieldset-angular",
   "description": "Tink editable fieldset Angular directive",
-  "version": "1.0.0",
+  "version": "0.1.0-beta.1",
   "repository": {
     "type": "git",
     "url": "git@github.com:tinkkit/tink-editable-fieldset-angular.git"
